--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -133,7 +133,7 @@ header > ul {
     color: #C7C6C6;
 }
 
-.habitItem img, .memberItem img {
+.streak img,  .checkmark img {
     max-width: 30px;
     max-height: 30px;
     align-items: center;
@@ -444,10 +444,14 @@ button {
     flex-direction: column;
 }
 
+.habitat_view * {
+    margin: 5px;
+}
+
 #chatroomLink {
     background-color: var(--purple);
     color: white;
-    padding: 5px;
+    padding: 7px;
     text-align: center;
     width: 150px;
     border-radius: 10px;
@@ -522,7 +526,6 @@ button {
     /* Content arrangement */
     display: flex;
     align-items: center;
-    margin-top: 10px;
     min-width: 100%;
 
     /* Background styling */
@@ -532,10 +535,29 @@ button {
 }
 
 .memberItem * {
-    display: flex;
     margin: 5px;
     text-decoration: none;
+}
+
+.profileIcon {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+
+    margin-right: 0px;
+
+    object-fit: cover;
+    border-radius: 100%;
+    border: solid 2px black;
+
     align-items: center;
+}
+
+#memberList {
+    margin: 10px;
+    width: 60%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 /* .habitat_details {
@@ -630,13 +652,7 @@ button {
 .members-list p {
     margin-bottom: 8px; 
 }
-.habitat_view img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%; 
-    object-fit: cover; 
-    margin-bottom: 10px; 
-}
+
 
 .habitat_view .flame-icon {
     width: 20px; 
