No habitat selected page fixed

--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -448,6 +448,10 @@ button {
     margin: 5px;
 }
 
+.vertically {
+    margin: auto;
+}
+
 #chatroomLink {
     background-color: var(--purple);
     color: white;
