--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -122,7 +122,10 @@
                 
                 
             {% else %}
-                <p>Not working yet?</p>
+                <div class="centered vertically">
+                    <p>No habitat is currently selected</p>
+                </div>
+                
                 <!-- Your existing code for displaying habits -->
             {% endif %}
 
