--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -826,6 +826,16 @@ button {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+#profilePopup {
+    display: none;
+    position: fixed;
+    padding: 20px;
+    background: white;
+    border-radius: 15px;
+    z-index: 1;
+}
+
+
 /* Style for the close button in the pop-up form */
 .invitation-form-popup .cancel {
     background-color: #ccc;
