--- a/flask_app/templates/aboutUs.html
+++ b/flask_app/templates/aboutUs.html
@@ -11,15 +11,19 @@ About Us
     <h1>ABOUT US</h1>
     <p>
         Although most people recognize the benefit of forming good habits, the positive effects of those good habits are
-        often only recognizable weeks, months, or even years after they are already formed.
+        often only recognizable weeks, months, or even years after they are already formed.<br><br>
+
         Because it is hard to see the short-term value of good habits, it is very common to give up on a good habit
-        before those positive effects have the chance to develop.
+        before those positive effects have the chance to develop.<br><br>
+
         All of us here at Habit Hero aim to fix that by providing a place to stay accountable to your habits, all while
-        having fun with a little healthy competition.
+        having fun with a little healthy competition.<br><br>
     </p>
 
-    <h2>Contact Us</h2>
-    <form id="contactForm" method="post">
+   
+    <form id="contactForm" class="form-group" method="post">
+        <h2>Contact Us</h2>
+        
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
 
@@ -32,7 +36,7 @@ About Us
         <label for="message">Message:</label>
         <textarea id="message" name="message" rows="4" required></textarea>
 
-        <input type="submit" value="Submit">
+        <input class="submit_button" type="submit" value="Submit">
     </form>
 </div>
 
