fixed styling bug for login form

--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -236,7 +236,7 @@ form input[type='file'] {
     /* margin-bottom: 5px; */
 }
 
-.form-group input[type='text'], .form-group textarea {
+.form-group input, .form-group textarea {
     width: 100%;
     padding: 10px;
 
@@ -894,10 +894,19 @@ button {
 .row {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+input[type='file'], input[type='checkbox'] {
+    width: auto;
+    padding: 5px;
+    margin: 5px;
 }
 
 .form-group label {
     width: 100%;
+
 }
 
 
