--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -185,8 +185,8 @@
 
             // Set the position of the popup
             popup.style.display = "block";
-            popup.style.top = (rect.top - 25) + "px";
-            popup.style.right = (rect.right + 201) + "px";
+            popup.style.top = (rect.top - 35) + "px";
+            popup.style.left = (rect.left - 235) + "px";
 
             // Populate the popup with user information
             popup.innerHTML = `
