Add is_public column and update create habitat

--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -19,7 +19,7 @@
                 {{form.icon_image.label}} {{form.icon_image}}
             </div>
             <div class="row">
-                {{ form.is_private.label }} {{ form.is_private }}
+                {{ form.is_public.label }} {{ form.is_public }}
             </div>
 
             <button type="submit" class="btn">Create Habitat</button>
