--- a/flask_app/templates/home1.html
+++ b/flask_app/templates/home1.html
@@ -33,7 +33,10 @@
 
         <div class="landingabout">
             <h3>Our Goal</h3>
-            <p>We want to create an environment that promotes the creation of better habits. There's no better motivator than your friends.</p>
+            <p>We want to create an environment that promotes the creation of better habits. There's no better motivator than your friends.</p> <br>
+
+
+            
         </div>
     </div>
 </body>
