--- a/flask_app/templates/aboutUs.html
+++ b/flask_app/templates/aboutUs.html
@@ -11,41 +11,35 @@ About Us
     <h1>ABOUT US</h1>
     <p>
         Although most people recognize the benefit of forming good habits, the positive effects of those good habits are
-        often only recognizable weeks, months, or even years after they are already formed.<br><br>
-
+        often only recognizable weeks, months, or even years after they are already formed.
         Because it is hard to see the short-term value of good habits, it is very common to give up on a good habit
-        before those positive effects have the chance to develop.<br><br>
-
+        before those positive effects have the chance to develop.
         All of us here at Habit Hero aim to fix that by providing a place to stay accountable to your habits, all while
-        having fun with a little healthy competition.<br><br>
+        having fun with a little healthy competition.
     </p>
 
-   
-    <form id="contactForm" class="form-group" method="post">
+    {% if submitted %}
+        <p class="thank-you-message">Thank you for reaching out! We will get back to you soon.</p>
+    {% else %}
         <h2>Contact Us</h2>
-        
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+        <form id="contactForm" method="post" action="{{ url_for('aboutUs') }}">
+            {{ form.hidden_tag() }}
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
 
-        <label for="subject">Subject:</label>
-        <input type="text" id="subject" name="subject" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
 
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject" required>
 
-        <input class="submit_button" type="submit" value="Submit">
-    </form>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+
+            <input type="submit" value="Submit">
+        </form>
+    {% endif %}
 </div>
-
-<script>
-    document.getElementById("contactForm").addEventListener("submit", function(event) {
-        event.preventDefault();
-        location.reload();
-    });
-</script>
-
 
 {% endblock %}
