--- a/flask_app/templates/profile.html
+++ b/flask_app/templates/profile.html
@@ -29,7 +29,7 @@
             </div>
             
             <h1>{{ user.first_name }} {{ user.last_name }}</h1>
-            <p class="habitScore">You have {{ user.score }} gems</p>
+            <p class="habitScore">You have {{ user.score }} gems<span class="tooltip">?</span></p>
             <!-- Edit form and bio display -->
             <div id="editFormContainer" style="display: none;">
                 <form method="POST" action="/profile" enctype="multipart/form-data">
