Join habitat works-adjust my_habitats query-search

--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -464,7 +464,7 @@ button {
     margin: auto;
 }
 
-#chatroomLink {
+#chatroomLink, #joinButton {
     background-color: var(--purple);
     color: white;
     padding: 7px;
